# pytest-cloudist

./: LICENSE  README.md  pyproject.toml
src/cdist/: cloud_session.py  plugin.py  remote_function.py
src/cloudist/: meadowrun_session.py  plugin.py  remote_function.py
test/: conftest.py  test_cdist.py  test_cloudist.py  test_markers.py
