[tool.poetry]
name = "pytest-cloudist"
version = "0.1.0"
description = ""
authors = ["Kurt Schelfthout <kurt.schelfthout@gmail.com>"]
packages = [
    { include = "cloudist", from = "src" },
]

[tool.poetry.plugins."pytest11"]
"cloudist" = "cloudist.plugin"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"
meadowrun = "^0.2.4"


[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
  "slow: mark a test as slow",
  "network: mark a test as network",
  "db: tests requiring a database (mysql or postgres)",
]