[tool.poetry]
name = "pytest-cloudist"
version = "0.1.0"
description = "Distribute tests to cloud machines without fuss"
readme = "README.md"
authors = ["Kurt Schelfthout <kurt.schelfthout@gmail.com>"]
homepage = "https://github.com/kurtschelfthout/pytest-cloudist"
repository = "https://github.com/kurtschelfthout/pytest-cloudist"
packages = [
    { include = "cloudist", from = "src" },
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.plugins."pytest11"]
"cloudist" = "cloudist.plugin"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"
# meadowrun = "^0.2.4"
# always specify git dependencies by rev - by branch works here, but any installs of pytest-cloudist will fail,
# because pip resolves the branch to a rev on install, and then when trying to install from a requirements file,
# detects a conflict between the already installed version (by rev) and the requested version (by branch)
meadowrun = {git="https://github.com/hrichardlee/meadowrun.git", rev="9c0ec049d1014ccb599d108d95d35dc9f99b8c10"}



[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
  "slow: mark a test as slow",
  "network: mark a test as network",
  "db: tests requiring a database (mysql or postgres)",
]